@@ -4,12 +4,6 @@
            i18n_domain="eea">
 
   <browser:page for="eea.daviz.content.interfaces.IDavizVisualization"                                                                                                                                                                        
-                name="data_source"
-                class=".daviz.DavizDataSource"
-                permission="zope2.View"
-                />
-
-  <browser:page for="eea.daviz.content.interfaces.IDavizVisualization"                                                                                                                                                                        
                 name="eeareferencebrowser-popup-selecteditem.html"
                 template="templates/daviz-popup-selecteditem.pt"
                 class="eea.relations.browser.app.popup.PopupSelectedItem"
