@@ -3,6 +3,9 @@ Changelog
 
 6.5-dev - (unreleased)
 ----------------------
+* Change: removed redundant and unnecessary data_source provenance code, 
+  which is already better implemented with @@data.info
+  [demarant refs #9561 and #9571]
 
 6.4 - (2013-02-04)
 ------------------
